log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Thu 30 Mar 2023 03:24:55 PM UTC: 
 tests:  0|6
total_score: 0/70
4bfcc3e
Thu 30 Mar 2023 03:34:18 PM UTC: 
 arraylist.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:15:26: error: ‘arrayList’ undeclared (first use in this function); did you mean ‘ArrayList’?
   15 |   dato = malloc( sizeof( arrayList));
      |                          ^~~~~~~~~
      |                          ArrayList
arraylist.c:15:26: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
e9d35b0
Thu 30 Mar 2023 03:34:38 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
8f4bc92
Thu 30 Mar 2023 03:34:59 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:23:12: error: incompatible types when returning type ‘ArrayList’ {aka ‘struct ArrayList’} but ‘ArrayList *’ {aka ‘struct ArrayList *’} was expected
   23 |     return *dato;
      |            ^~~~~
arraylist.c:24:1: error: control reaches end of non-void function [-Werror=return-type]
   24 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
f721c74
Thu 30 Mar 2023 03:35:06 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
fd72c4e
Thu 30 Mar 2023 03:36:10 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:17:18: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   17 |   dato->capacity = NULL;
      |                  ^
arraylist.c:18:14: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   18 |   dato->size = NULL;
      |              ^
cc1: all warnings being treated as errors
Compilation failed
247c384
Thu 30 Mar 2023 03:36:24 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
9b4e251
Thu 30 Mar 2023 03:37:11 PM UTC: 
 arraylist.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
 tests:  0|6
total_score: 0/70
7ac2305
Thu 30 Mar 2023 03:37:23 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
b417eda
Thu 30 Mar 2023 03:37:36 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:16:9: error: expected identifier before ‘*’ token
   16 |   dato->**data = malloc( sizeof( void) * 2);
      |         ^
Compilation failed
f06526f
